<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_root"
    android:background="@color/white"
    tools:context=".activity.TestQuizActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/sharelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_above="@+id/rl_hint_next">

        <RelativeLayout
            android:id="@+id/tq_cl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            >


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true">



                <LinearLayout
                    android:id="@+id/titleLL1"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp">

                    <TextView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="YOMPLEX"
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/blue"
                        android:src="@drawable/ic_splash_new"
                        android:fontFamily="@font/ribeyemarrow_regular"
                        />
                    <TextView
                        android:id="@+id/tv_quiz_title1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="JEE Maths Booster"
                        android:textSize="@dimen/_14sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:textColor="@color/blue"
                        android:fontFamily="@font/lato_bold"/>

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/ll_share_inflate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/tq_cl1"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"

            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"/>



    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_hint_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp">

        <!--<androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/next_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="1dp"
            android:visibility="gone"
            android:background="@drawable/prev_next_active_btn">

            <TextView
                android:id="@+id/txt_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_marginStart="16dp"
                android:fontFamily="@font/lato_bold"
                android:gravity="center_vertical"
                android:text="NEXT"
                android:letterSpacing="0.1"
                android:textSize="@dimen/_11sdp"
                android:textColor="#424242"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/right_arrow"
                android:layout_width="11dp"
                android:layout_height="11dp"
                android:layout_marginStart="4dp"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_next"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_right_arrow" />

        </androidx.constraintlayout.widget.ConstraintLayout>-->




        <!--<Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:id="@+id/btn_next"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/quicksand_bold"
            style="@style/Widget.AppCompat.Button.Borderless"

            android:text="Next"

            android:layout_centerVertical="true"
            android:textColor="@color/white"/>-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:visibility="visible"

            android:layout_centerVertical="true">

            <Button
                android:id="@+id/btn_done"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/lato_bold"
                android:background="@drawable/prev_next_active_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="DONE"
                android:textColor="#424242"
                android:letterSpacing="0.1"
                android:textSize="@dimen/_11sdp"
                android:layout_centerVertical="true"
                />


            <Button
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/_20sdp"
                android:fontFamily="@font/lato_bold"
                android:background="@drawable/share_btn_drawable"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:text="SHARE"
                android:letterSpacing="0.1"
                android:textSize="@dimen/_11sdp"
                android:layout_centerVertical="true"
                android:textColor="@color/white"
                />

        </LinearLayout>

        <!--<Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:id="@+id/btn_hint"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/quicksand_bold"
            android:background="@drawable/hint_button_bg"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="Hint"
            android:layout_centerVertical="true"
            android:textColor="@color/hint_text"
            />-->

        <!--<androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/prev_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="1dp"
            android:visibility="gone"
            android:background="@drawable/prev_next_inactive_btn">

            <TextView

                android:id="@+id/txt_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/lato_bold"
                android:gravity="center_vertical"
                android:letterSpacing="0.1"
                android:textSize="@dimen/_11sdp"
                android:text="PREV"
                android:textColor="#D6D6D6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/left_arrow"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/left_arrow"
                android:layout_width="11dp"
                android:layout_height="11dp"


                android:layout_marginStart="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:tint="#D6D6D6"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/ic_left_arrow" />

        </androidx.constraintlayout.widget.ConstraintLayout>-->
    </RelativeLayout>




</RelativeLayout>