...
            android:layout_height="wrap_content"
            android:text="Lives"
            android:visibility="gone"
            android:textAllCaps="true"
            android:textColor="@color/lives_text"
            android:fontFamily="@font/quicksand_bold"
            android:layout_above="@id/btn_start"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_15sdp"
            android:textSize="@dimen/_12ssp"/>

    <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:text="start"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/white"
            android:background="@drawable/action"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_alignParentBottom="true"
...
