...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.ConstraintLayout>

    <androidx.constraintlayout.ConstraintLayout
            android:id="@+id/ll_quiz_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_below="@id/ll_quiz_1">

        <Button
                android:id="@+id/btn_quiz2"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/quiz_level_bg"
                android:textColor="@color/white"
                android:text="@string/str_Quiz_2"
                android:fontFamily="@font/quicksand_medium"
...
